--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap');
 
 @media (min-width: 1px) {
   ::-webkit-scrollbar {
@@ -36,23 +37,29 @@
   h1 {
     display: inline;
     color: #171d1c;
-    font-family: "Inter Tight", sans-serif;
-    font-weight: 600;
+    /* font-family: "Inter Tight", sans-serif; */
+    font-weight: 400;
     line-height: 1;
-    font-size: clamp(60px, 10vw, 100px)
+    font-size: clamp(60px, 20vw, 200px);
+
+    font-family: "Mr De Haviland", cursive;
+    font-style: normal;
   }
 
   h2,
   h3 {
     display: inline;
-    color: #171d1c;
+    color: #2667ff;
     font-family: "Inter Tight", sans-serif;
-    font-weight: 400;
-    font-size: clamp(24px, 4vw, 32px)
+    font-weight: 700;
+    line-height: 1.4;
+    font-size: clamp(24px, 4vw, 42px);
   }
 
   h3 {
-    font-size: clamp(18px, 4vw, 24px)
+    font-weight: 400;
+    color: #171d1c;
+    font-size: clamp(18px, 4vw, 24px);
   }
 
   p,
@@ -62,15 +69,14 @@
     display: inline;
     color: #171d1c;
     font-family: "Inter Tight", sans-serif;
-    font-size: 14px;
+    font-size: clamp(16px, 2vw, 20px);
     font-weight: 400;
     line-height: 1.6;
   }
 
   span {
     display: inline;
-    font-size: 28px;
-    font-weight: 600;
+    font-size: 42px;
     line-height: 1.4;
   }
 
@@ -78,7 +84,7 @@
   button {
     text-decoration: none;
     width: fit-content;
-    font-weight: 500;
+    font-weight: 400;
     transition: 150ms linear;
   }
 
@@ -90,28 +96,43 @@
 
   form {
     width: 100%;
+    padding: 1rem;
+    padding-top: 4rem;
+    flex-direction: column;
+    gap: 0.4rem;
+    align-content: baseline;
+  }
+
+  .form-btn-holder {
+    width: 100%;
+    text-align: left;
+  }
+
+  .form-btn {
+    color: #2667ff;
+    font-size: 24px;
+    font-weight: 700;
   }
 
   input,
   textarea {
-    padding: 0.8rem;
-    border: 1px solid #171d1c40;
-    background: white;
+    all: unset;
     color: #171d1c;
     font-family: "Inter Tight", sans-serif;
     -webkit-border-radius: 0;
     border-radius: 0;
-  }
-
-  input:hover,
-  textarea:hover {
-    border: 1px solid #2667ff60;
-  }
-
-  input:focus,
-  textarea:focus {
     outline: none;
-    border: 1px solid #2667ff;
+    background: none;
+    border: 0px;
+    font-weight: 400;
+    font-size: clamp(16px, 2vw, 20px);
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    padding-left: 1rem;
+  }
+
+  ::placeholder {
+    color: #171d1c60;
   }
 
   .title {
@@ -119,14 +140,17 @@
     align-items: baseline;
     flex-direction: column;
     flex-wrap: wrap;
-    padding-top: 24rem;
-    padding-bottom: 20rem;
     gap: 1rem;
+    /* padding-top: 24rem;
+    padding-bottom: 16rem; */
+
+    padding-top: 22rem;
+    padding-bottom: 12rem;
   }
 
   .nav {
     display: flex;
-    justify-content: right;
+    justify-content: space-between;
     align-items: center;
     gap: 2rem;
     position: fixed;
@@ -134,32 +158,54 @@
     transition: 0.3s;
     width: 100%;
     padding: 1rem;
-    padding-right: 1rem;
-    height: 2rem;
-    backdrop-filter: blur(10px) brightness(1) contrast(1) saturate(1.4);
-    -moz-backdrop-filter: blur(10px) brightness(1) contrast(1) saturate(1.4);
-    -webkit-backdrop-filter: blur(10px) brightness(1) contrast(1) saturate(1.4);
+    padding-bottom: 0rem;
     z-index: 2;
-    /* animation: scroll;
-    animation-timeline: scroll(); */
+    animation: scroll;
+    animation-timeline: scroll();
   }
 
   @keyframes scroll {
-    /* 25% {
-      top: -2.75rem;
+    25% {
+      top: -5rem;
     }
 
     100% {
-      top: -2.75rem;
-    } */
+      top: -5rem;
+    }
+  }
 
-    /* 0% {
-      top: -2.75rem;
+  .nav-dropdown {
+    display: flex;
+    justify-content: right;
+    align-items: center;
+    position: fixed;
+    top: -10rem;
+    padding-right: 2rem;
+    width: 100%;
+    z-index: 2;
+    animation: scrollUp;
+    animation-timeline: scroll();
+  }
+
+  @keyframes scrollUp {
+    10% {
+      top: -10rem;
     }
 
-    10% {
-      top: 0rem;
-    } */
+    40% {
+      top: 6rem;
+    }
+
+    100% {
+      top: 6rem;
+    }
+  }
+
+  .nav-right {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 2rem;
   }
 
   .contact-button {
@@ -170,123 +216,122 @@
     color: #171d1c;
   }
 
-  .keyword-holder {
-    display: flex;
-    justify-content: left;
-    flex-wrap: wrap;
-    gap: 0.4rem;
-  }
-
-  .keyword-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-
-  .keyword {
-    padding: 0.2rem;
-    padding-left: 0.6rem;
-    padding-right: 0.6rem;
-    font-size: 12px;
-    font-weight: 500;
-    border: 1px solid #171d1c40;
-    background: white;
-  }
-
-  .large {
-    width: 100%;
-    height: fit-content;
-    display: block;
-    /* border: 1px solid #171d1c40; */
-    box-shadow: 0px 0px 10px 2px #171d1c10;
-  }
-
-  .img-container {
-    width: 100%;
-    display: flex;
-    gap: 0.8rem;
-    flex-wrap: wrap;
-    /* justify-content: center; */
-    align-items: flex-end;
-    margin-top: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .img-content {
-    display: flex;
-    gap: 0.8rem;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-
-  .img-holder {
-    width: 50%;
-    max-height: 25rem;
-  }
-
-  .img-preview {
-    width: 6rem;
-    height: 4rem;
-    object-fit: cover;
-    object-position: top center;
-  }
-
-  .container-holder {
+  .container-holder,
+  .container-holder-colored {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: fit-content;
-    flex-direction: column;
+    min-height: 100vh;
+  }
+
+  .container-holder-colored {
+    background: #f5f5f540;
+  }
+
+  .image-holder,
+  .image-holder-wide {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 2rem;
+  }
+
+  .image {
+    width: 100%;
+    height: 900px;
+    display: block;
+    object-fit: contain;
+  }
+
+  .image-holder-wide {
+    background: #f5f5f540;
+    padding: 2rem;
+  }
+
+  .image-wide {
+    height: auto;
+    width: 100%;
+    box-shadow: 0px 0px 20px 2px #171d1c10;
+    display: block;
+    object-fit: contain;
   }
 
   .container {
     width: 95%;
-    /* padding-top: 2rem; */
-    min-height: 100vh;
+    padding-top: 6rem;
+    margin-bottom: 6rem;
   }
 
-  .content-holder {
-    padding: 1rem;
-    margin-top: 1rem;
-    margin-bottom: 1rem;
+  .project-holder {
+    display: flex;
+    flex-direction: column;
   }
 
-  .content {
+  .project {
     width: 100%;
-    padding: 0rem;
-    padding-bottom: 1rem;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding: 1rem;
+    gap: 0.4rem;
+    align-items: center;
+  }
+
+  .project-title {
+    display: inline;
+    color: #171d1c;
+    font-family: "Inter Tight", sans-serif;
+    font-weight: 900;
+    font-size: clamp(28px, 4vw, 100px)
+  }
+
+  .project-link,
+  .nav-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    color: white;
+    font-size: clamp(16px, 2vw, 24px);
+    font-weight: 700;
+    height: 4rem;
+    width: 4rem;
+    background: #2667ff;
+    border-radius: 100%;
+    transition: 150ms ease-out;
+    cursor: pointer;
+  }
+
+  .nav-button {
+    position: absolute;
+  }
+
+  .nav-button:hover {
+    height: 10rem;
+    width: 10rem;
+    transition: 150ms ease-in;
+  }
+
+  .nav-link {
+    display: none;
+    color: white;
+    font-size: clamp(16px, 2vw, 24px);
+    font-weight: 700;
+  }
+
+  .nav-button:hover .nav-link {
+    display: flex;
+  }
+
+  .nav-button:hover #nav-icon {
+    display: none;
   }
 
   .project-description {
-    display: block;
-    margin-top: 0.4rem;
-  }
-
-  .btn-img {
-    line-height: 0;
-  }
-
-  .btn-img:hover {
-    opacity: 1;
-  }
-
-  .blur {
-    position: absolute;
-    width: 6rem;
-    height: 4rem;
-    object-fit: cover;
-    object-position: top center;
-    backdrop-filter: blur(10px);
-    -moz-backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(10px);
-    border: 1px solid #171d1c20;
-    transition: 150ms linear;
-  }
-
-  .blur:hover {
-    border: 1px solid #2667ff80;
-    transition: 150ms linear;
+    display: flex;
+    align-items: center;
   }
 
   #fade1,
@@ -320,7 +365,7 @@
   }
 
   #icon {
-    animation: rotateAnimation 5s linear infinite;
+    animation: rotateAnimation 15s linear infinite;
   }
 
   @keyframes rotateAnimation {
@@ -333,8 +378,8 @@
     }
   }
 
-  .scrolling-text {
-    animation: scrolling 75s linear infinite;
+  /* .scrolling-text {
+    animation: scrolling 25s linear infinite;
   }
 
   @keyframes scrolling {
@@ -345,76 +390,68 @@
     to {
       transform: translateX(100%);
     }
-  }
+  } */
 
   .footer {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     padding: 1rem;
-    padding-top: 4rem;
-    padding-bottom: 4rem;
   }
 
-  .footer-text {
-    font-size: 10px;
-    text-align: center;
-    font-weight: 500;
-  }
-}
-
-@media (min-width: 699px) {
-
-  p,
-  span,
-  a,
-  button {
-    font-size: 16px;
+  .footer-links {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
   }
 
-  span {
-    font-size: 42px;
-  }
-
-  .footer-text {
-    font-size: 12px;
-  }
-
-  .nav {
-    padding-right: 2rem;
-    height: 4rem;
-  }
-
-  .img-holder {
-    width: 25%;
-    max-height: 50rem;
-  }
-
-  .img-preview {
-    width: 13rem;
-    height: 7rem;
-  }
-
-  .blur {
-    width: 13rem;
-    height: 7rem;
+  hr {
+    all: unset;
+    border-top: 1px solid #f5f5f5;
   }
 }
 
 @media (min-width: 1199px) {
-  .title {
-    flex-direction: row;
-  }
-
   .container {
     width: 70%;
   }
 
-  .content-holder {
+  .project {
     padding: 2rem;
   }
 
+  .nav {
+    padding: 3rem;
+    padding-bottom: 0rem;
+  }
+
   form {
-    width: 60%;
-    min-width: fit-content;
+    padding: 2rem;
+  }
+
+  input,
+  textarea {
+    padding-left: 2rem;
+  }
+
+  .footer {
+    padding: 3rem;
+  }
+
+  .project-link {
+    height: 8rem;
+    width: 8rem;
+  }
+
+  hr {
+    border-top: 2px solid #f5f5f5;
+  }
+
+
+  .image-holder-wide {
+    padding: 4rem;
+  }
+
+  .image-wide {
+    width: 70%;
   }
 }
