--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -53,7 +53,7 @@
     font-family: "Inter Tight", sans-serif;
     font-weight: 700;
     line-height: 1.4;
-    font-size: clamp(24px, 4vw, 42px);
+    font-size: clamp(20px, 4vw, 42px);
   }
 
   h3 {
@@ -97,7 +97,7 @@
   form {
     width: 100%;
     padding: 1rem;
-    padding-top: 4rem;
+    padding-top: 3rem;
     flex-direction: column;
     gap: 0.4rem;
     align-content: baseline;
@@ -105,12 +105,12 @@
 
   .form-btn-holder {
     width: 100%;
-    text-align: left;
+    text-align: right;
   }
 
   .form-btn {
     color: #2667ff;
-    font-size: 24px;
+    font-size: clamp(18px, 4vw, 24px);
     font-weight: 700;
   }
 
@@ -126,8 +126,8 @@
     border: 0px;
     font-weight: 400;
     font-size: clamp(16px, 2vw, 20px);
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 0.4rem;
+    padding-bottom: 0.4rem;
     padding-left: 1rem;
   }
 
@@ -158,14 +158,18 @@
     transition: 0.3s;
     width: 100%;
     padding: 1rem;
-    padding-bottom: 0rem;
+    padding-bottom: 0.4rem;
+    padding-top: 0.4rem;
     z-index: 2;
     animation: scroll;
     animation-timeline: scroll();
+
+    backdrop-filter: blur(20px);
+    -webkit-backdrop-filter: blur(20px);
   }
 
   @keyframes scroll {
-    25% {
+    10% {
       top: -5rem;
     }
 
@@ -188,11 +192,7 @@
   }
 
   @keyframes scrollUp {
-    10% {
-      top: -10rem;
-    }
-
-    40% {
+    25% {
       top: 6rem;
     }
 
@@ -214,6 +214,9 @@
     border-radius: 0px;
     background: none;
     color: #171d1c;
+    color: #2667ff;
+    font-size: clamp(16px, 4vw, 20px);
+    font-weight: 400;
   }
 
   .container-holder,
@@ -240,7 +243,7 @@
 
   .image {
     width: 100%;
-    height: 900px;
+    height: 400px;
     display: block;
     object-fit: contain;
   }
@@ -259,7 +262,7 @@
   }
 
   .container {
-    width: 95%;
+    width: 90%;
     padding-top: 6rem;
     margin-bottom: 6rem;
   }
@@ -317,7 +320,7 @@
   .nav-link {
     display: none;
     color: white;
-    font-size: clamp(16px, 2vw, 24px);
+    font-size: clamp(18px, 4vw, 24px);
     font-weight: 700;
   }
 
@@ -422,15 +425,21 @@
   .nav {
     padding: 3rem;
     padding-bottom: 0rem;
+
+    backdrop-filter: blur(0px);
+    -webkit-backdrop-filter: blur(0px);
   }
 
   form {
     padding: 2rem;
+    padding-top: 4rem;
   }
 
   input,
   textarea {
     padding-left: 2rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
   }
 
   .footer {
@@ -446,12 +455,15 @@
     border-top: 2px solid #f5f5f5;
   }
 
-
   .image-holder-wide {
     padding: 4rem;
   }
 
   .image-wide {
     width: 70%;
+  }
+
+  .image {
+    height: 900px;
   }
 }
