--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Mr+De+Haviland&display=swap');
 
 @media (min-width: 1px) {
   ::-webkit-scrollbar {
@@ -37,13 +36,10 @@
   h1 {
     display: inline;
     color: #171d1c;
-    /* font-family: "Inter Tight", sans-serif; */
+    font-family: "Inter Tight", sans-serif;
     font-weight: 400;
     line-height: 1;
     font-size: clamp(60px, 20vw, 200px);
-
-    font-family: "Mr De Haviland", cursive;
-    font-style: normal;
   }
 
   h2,
@@ -408,6 +404,54 @@
     all: unset;
     border-top: 1px solid #f5f5f5;
   }
+
+  .image-holder-absolute {
+    position: absolute;
+    z-index: 1;
+    right: 10%;
+    top: 8%;
+  }
+
+  .image-holder-cover {
+    border-radius: 100rem;
+    aspect-ratio: 1 / 1;
+    display: flex;
+    justify-content: center;
+    position: relative;
+  }
+
+  .image-cover {
+    object-fit: cover;
+    border-radius: 100rem;
+    box-shadow: 0px 0px 20px 2px #171d1c10;
+    aspect-ratio: 1/1;
+    scale: 1;
+    cursor: pointer;
+    width: 150px;
+    height: 150px;
+    padding: 1rem;
+    transition: 350ms ease;
+  }
+
+  .image-holder-cover:hover .image-cover {
+    scale: .8;
+    padding: 0.4rem;
+    transition: 350ms ease;
+  }
+
+  .image-text {
+    display: flex;
+    text-align: center;
+    opacity: 0;
+    position: absolute;
+    transition: 350ms ease;
+    bottom: 0;
+  }
+
+  .image-holder-cover:hover .image-text {
+    opacity: 1;
+    transition: 350ms ease;
+  }
 }
 
 @media (min-width: 1199px) {
@@ -462,5 +506,24 @@
 
   .image {
     height: 900px;
+  }
+
+  .image-holder-absolute {
+    position: absolute;
+    z-index: 1;
+    right: 25%;
+    top: 4%;
+  }
+
+  .image-cover {
+    width: 300px;
+    height: 300px;
+    padding: 2rem;
+  }
+
+  .image-holder-cover:hover .image-cover {
+    scale: .8;
+    padding: 1rem;
+    transition: 350ms ease;
   }
 }
