--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -143,7 +143,7 @@
 
   .nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: right;
     align-items: center;
     gap: 2rem;
     position: fixed;
@@ -219,10 +219,13 @@
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    /* background: linear-gradient(to top, whitesmoke, rgb(255, 255, 255)); */
   }
 
   .container-holder-colored {
-    background: #f5f5f540;
+    /* background: #f5f5f540; */
+    /* background: linear-gradient(to bottom, whitesmoke, rgb(255, 255, 255)); */
+
   }
 
   .image-holder,
@@ -242,7 +245,7 @@
   }
 
   .image-holder-wide {
-    background: #f5f5f540;
+    /* background: linear-gradient(to top, whitesmoke, rgb(255, 255, 255)); */
     padding: 2rem;
   }
 
@@ -390,7 +393,7 @@
 
   .footer {
     display: flex;
-    justify-content: space-between;
+    justify-content: left;
     padding: 1rem;
   }
 
@@ -417,6 +420,7 @@
     aspect-ratio: 1 / 1;
     display: flex;
     justify-content: center;
+    align-items: center;
     position: relative;
   }
 
@@ -490,10 +494,6 @@
   .project-link {
     height: 8rem;
     width: 8rem;
-  }
-
-  hr {
-    border-top: 2px solid #f5f5f5;
   }
 
   .image-holder-wide {
