--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -395,6 +395,7 @@
     display: flex;
     justify-content: left;
     padding: 1rem;
+    padding-top: 0rem;
   }
 
   .footer-links {
@@ -489,6 +490,7 @@
 
   .footer {
     padding: 3rem;
+    padding-top: 0rem;
   }
 
   .project-link {
