--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,7 +39,7 @@
     font-family: "Inter Tight", sans-serif;
     font-weight: 400;
     line-height: 1;
-    font-size: clamp(60px, 20vw, 200px);
+    font-size: clamp(60px, 20vw, 120px);
   }
 
   h2,
@@ -133,9 +133,8 @@
 
   .title {
     display: flex;
-    align-items: baseline;
-    flex-direction: column;
-    flex-wrap: wrap;
+    align-items: center;
+    flex-wrap: wrap-reverse;
     gap: 1rem;
     padding-top: 20rem;
     padding-bottom: 12rem;
@@ -282,8 +281,8 @@
     display: inline;
     color: #171d1c;
     font-family: "Inter Tight", sans-serif;
-    font-weight: 900;
-    font-size: clamp(28px, 4vw, 100px)
+    font-weight: 400;
+    font-size: clamp(28px, 10vw, 100px)
   }
 
   .project-link,
@@ -377,20 +376,6 @@
     }
   }
 
-  /* .scrolling-text {
-    animation: scrolling 25s linear infinite;
-  }
-
-  @keyframes scrolling {
-    from {
-      transform: translateX(-100%);
-    }
-
-    to {
-      transform: translateX(100%);
-    }
-  } */
-
   .footer {
     display: flex;
     justify-content: left;
@@ -409,13 +394,6 @@
     border-top: 1px solid #f5f5f5;
   }
 
-  .image-holder-absolute {
-    position: absolute;
-    z-index: 1;
-    right: 10%;
-    top: 8%;
-  }
-
   .image-holder-cover {
     border-radius: 100rem;
     aspect-ratio: 1 / 1;
@@ -431,7 +409,6 @@
     box-shadow: 0px 0px 20px 2px #171d1c10;
     aspect-ratio: 1/1;
     scale: 1;
-    cursor: pointer;
     width: 150px;
     height: 150px;
     padding: 1rem;
@@ -456,6 +433,17 @@
   .image-holder-cover:hover .image-text {
     opacity: 1;
     transition: 350ms ease;
+  }
+
+  .slide {
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 0;
+    /* background-color: rgb(0, 0, 0); */
+    backdrop-filter: blur(20px);
+    z-index: 1;
   }
 }
 
@@ -508,13 +496,6 @@
 
   .image {
     height: 900px;
-  }
-
-  .image-holder-absolute {
-    position: absolute;
-    z-index: 1;
-    right: 25%;
-    top: 4%;
   }
 
   .image-cover {
