--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 @media (min-width: 1px) {
   ::-webkit-scrollbar {
@@ -6,11 +6,11 @@
   }
 
   ::-webkit-scrollbar-track {
-    background: #171d1c20;
+    background: black;
   }
 
   ::-webkit-scrollbar-thumb {
-    background: #171d1c;
+    background: whitesmoke;
   }
 
   html,
@@ -19,6 +19,7 @@
     width: 100%;
     min-height: 100vh;
     position: relative;
+    background: black;
   }
 
   * {
@@ -35,39 +36,50 @@
 
   h1 {
     display: inline;
-    color: #171d1c;
-    font-family: "Inter Tight", sans-serif;
-    font-weight: 400;
+    color: whitesmoke;
+    font-weight: 600;
     line-height: 1;
-    font-size: clamp(60px, 20vw, 120px);
+    font-size: clamp(64px, 14vw, 180px);
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
   }
 
   h2,
   h3 {
     display: inline;
     color: #2667ff;
-    font-family: "Inter Tight", sans-serif;
-    font-weight: 700;
+    color: whitesmoke;
+    font-weight: 200;
     line-height: 1.4;
-    font-size: clamp(20px, 4vw, 42px);
+    font-size: clamp(24px, 4vw, 48px);
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
   }
 
   h3 {
-    font-weight: 400;
-    color: #171d1c;
+    color: whitesmoke;
     font-size: clamp(18px, 4vw, 24px);
   }
 
   p,
   span,
   a,
-  button {
+  button,
+  li {
     display: inline;
-    color: #171d1c;
-    font-family: "Inter Tight", sans-serif;
+    color: whitesmoke;
     font-size: clamp(16px, 2vw, 20px);
     font-weight: 400;
     line-height: 1.6;
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
+  }
+
+  li {
+    display: block;
   }
 
   span {
@@ -92,11 +104,15 @@
 
   form {
     width: 100%;
-    padding: 1rem;
-    padding-top: 3rem;
+    padding: 4rem;
     flex-direction: column;
     gap: 0.4rem;
     align-content: baseline;
+
+    hr {
+      margin: 0;
+      width: 100%;
+    }
   }
 
   .form-btn-holder {
@@ -105,16 +121,17 @@
   }
 
   .form-btn {
-    color: #2667ff;
+    color: whitesmoke;
     font-size: clamp(18px, 4vw, 24px);
-    font-weight: 700;
   }
 
   input,
   textarea {
     all: unset;
-    color: #171d1c;
-    font-family: "Inter Tight", sans-serif;
+    color: whitesmoke;
+    font-family: "DM Sans", sans-serif;
+    font-optical-sizing: auto;
+    font-style: normal;
     -webkit-border-radius: 0;
     border-radius: 0;
     outline: none;
@@ -128,304 +145,118 @@
   }
 
   ::placeholder {
-    color: #171d1c60;
-  }
-
-  .title {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap-reverse;
-    gap: 1rem;
-    padding-top: 20rem;
-    padding-bottom: 12rem;
+    color: #f5f5f560;
   }
 
   .nav {
     display: flex;
-    justify-content: right;
+    justify-content: center;
     align-items: center;
     gap: 2rem;
     position: fixed;
-    top: 0rem;
+    top: 0;
     transition: 0.3s;
     width: 100%;
-    padding: 1rem;
-    padding-bottom: 0.4rem;
-    padding-top: 0.4rem;
+    padding: 2rem;
     z-index: 2;
-    animation: scroll;
-    animation-timeline: scroll();
+    /* animation: scroll;
+    animation-timeline: scroll(); */
+  }
 
+  /* @keyframes scroll {
+    0% {
+      top: 40rem;
+    }
+
+    5% {
+      top: 0rem;
+    }
+
+    100% {
+      top: 0rem;
+    }
+  } */
+
+  .nav-right {
+    display: flex;
+    justify-content: left;
+    flex-direction: column;
+    align-items: left;
+    gap: 0rem;
+    margin-left: 16rem;
+    width: 8rem;
+    padding: 1rem;
+    border: 1px solid #f5f5f540;
+    background: #00000020;
     backdrop-filter: blur(20px);
     -webkit-backdrop-filter: blur(20px);
   }
 
-  @keyframes scroll {
-    10% {
-      top: -5rem;
-    }
-
-    100% {
-      top: -5rem;
-    }
-  }
-
-  .nav-dropdown {
-    display: flex;
-    justify-content: right;
-    align-items: center;
-    position: fixed;
-    top: -10rem;
-    padding-right: 2rem;
-    width: 100%;
-    z-index: 2;
-    animation: scrollUp;
-    animation-timeline: scroll();
-  }
-
-  @keyframes scrollUp {
-    25% {
-      top: 6rem;
-    }
-
-    100% {
-      top: 6rem;
-    }
-  }
-
-  .nav-right {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2rem;
-  }
-
-  .contact-button {
-    padding: 0rem;
-    border: 0px;
-    border-radius: 0px;
-    background: none;
-    color: #171d1c;
-    color: #2667ff;
-    font-size: clamp(16px, 4vw, 20px);
-    font-weight: 400;
-  }
-
-  .container-holder,
-  .container-holder-colored {
+  .container-holder {
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: start;
     min-height: 100vh;
-    /* background: linear-gradient(to top, whitesmoke, rgb(255, 255, 255)); */
-  }
-
-  .container-holder-colored {
-    /* background: #f5f5f540; */
-    /* background: linear-gradient(to bottom, whitesmoke, rgb(255, 255, 255)); */
-
-  }
-
-  .image-holder,
-  .image-holder-wide {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 2rem;
-  }
-
-  .image {
-    width: 100%;
-    height: 400px;
-    display: block;
-    object-fit: contain;
-  }
-
-  .image-holder-wide {
-    /* background: linear-gradient(to top, whitesmoke, rgb(255, 255, 255)); */
-    padding: 2rem;
-  }
-
-  .image-wide {
-    height: auto;
-    width: 100%;
-    box-shadow: 0px 0px 20px 2px #171d1c10;
-    display: block;
-    object-fit: contain;
   }
 
   .container {
     width: 90%;
-    padding-top: 6rem;
-    margin-bottom: 6rem;
-  }
-
-  .project-holder {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .project {
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding: 1rem;
-    gap: 0.4rem;
-    align-items: center;
-  }
-
-  .project-title {
-    display: inline;
-    color: #171d1c;
-    font-family: "Inter Tight", sans-serif;
-    font-weight: 400;
-    font-size: clamp(28px, 8vw, 100px)
-  }
-
-  .project-link,
-  .nav-button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    color: white;
-    font-size: clamp(16px, 2vw, 24px);
-    font-weight: 700;
-    height: 4rem;
-    width: 4rem;
-    background: #2667ff;
-    border-radius: 100%;
-    transition: 150ms ease-out;
-    cursor: pointer;
-  }
-
-  .nav-button {
-    position: absolute;
-  }
-
-  .nav-button:hover {
-    height: 10rem;
-    width: 10rem;
-    transition: 150ms ease-in;
-  }
-
-  .nav-link {
-    display: none;
-    color: white;
-    font-size: clamp(18px, 4vw, 24px);
-    font-weight: 700;
-  }
-
-  .nav-button:hover .nav-link {
-    display: flex;
-  }
-
-  .nav-button:hover #nav-icon {
-    display: none;
-  }
-
-  .project-description {
-    display: flex;
-    align-items: center;
-  }
-
-  #icon {
-    animation: rotateAnimation 15s linear infinite;
-  }
-
-  @keyframes rotateAnimation {
-    from {
-      transform: rotate(0deg);
-    }
-
-    to {
-      transform: rotate(360deg);
-    }
-  }
-
-  .footer {
-    display: flex;
-    justify-content: left;
-    padding: 1rem;
-    padding-top: 0rem;
+    padding-block: 2rem;
   }
 
   .footer-links {
     display: flex;
+    justify-content: left;
     flex-wrap: wrap;
     gap: 2rem;
   }
 
   hr {
-    all: unset;
-    border-top: 1px solid #f5f5f5;
+    margin-top: 0.4rem;
+    border: 0px;
+    border-top: 1px solid #f5f5f540;
+    width: 250px;
   }
 
-  .image-holder-cover {
-    border-radius: 100rem;
-    aspect-ratio: 1 / 1;
+  .bio-holder1,
+  .bio-holder2 {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
+    flex-wrap: wrap;
+    padding: 3rem;
+    padding-bottom: 0rem;
+    justify-content: space-between;
   }
 
-  .image-cover {
-    object-fit: cover;
-    border-radius: 100rem;
-    box-shadow: 0px 0px 20px 2px #171d1c10;
-    aspect-ratio: 1/1;
-    scale: 1;
-    width: 150px;
-    height: 150px;
-    padding: 1rem;
-    transition: 350ms ease;
+  .bio-holder2 {
+    padding-top: 0rem;
   }
 
-  .image-holder-cover:hover .image-cover {
-    scale: .8;
+  .image {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
     padding: 0.4rem;
-    transition: 350ms ease;
-  }
-
-  .image-text {
-    display: flex;
-    text-align: center;
-    opacity: 0;
-    position: absolute;
-    transition: 350ms ease;
-    bottom: 0;
-  }
-
-  .image-holder-cover:hover .image-text {
-    opacity: 1;
-    transition: 350ms ease;
+    background: #f5f5f5;
   }
 }
 
 @media (min-width: 1199px) {
-  .container {
-    width: 70%;
-  }
-
-  .project {
-    padding: 2rem;
-  }
-
   .nav {
     padding: 3rem;
     padding-bottom: 0rem;
-
-    backdrop-filter: blur(0px);
-    -webkit-backdrop-filter: blur(0px);
   }
 
-  form {
-    padding: 2rem;
-    padding-top: 4rem;
+  .nav-right {
+    margin-left: 28rem;
+  }
+
+  .container-holder {
+    align-items: center;
+  }
+
+  .container {
+    padding-block: 4rem;
   }
 
   input,
@@ -435,37 +266,12 @@
     padding-bottom: 1rem;
   }
 
-  .footer {
+  .bio-holder1,
+  .bio-holder2 {
     padding: 3rem;
-    padding-top: 0rem;
-  }
-
-  .project-link {
-    height: 8rem;
-    width: 8rem;
-  }
-
-  .image-holder-wide {
-    padding: 4rem;
-  }
-
-  .image-wide {
-    width: 70%;
   }
 
   .image {
-    height: 900px;
-  }
-
-  .image-cover {
-    width: 300px;
-    height: 300px;
-    padding: 2rem;
-  }
-
-  .image-holder-cover:hover .image-cover {
-    scale: .8;
-    padding: 1rem;
-    transition: 350ms ease;
+    width: 50%;
   }
 }
