--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -113,7 +113,7 @@
 
   a:hover,
   button:hover {
-    opacity: 0.4;
+    opacity: 0.65;
     transition: 150ms linear;
   }
 
@@ -201,7 +201,7 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    background: #070707;
+    background: #07070740;
     width: 100%;
     padding-block: 1rem;
     backdrop-filter: blur(20px);
