--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -47,12 +47,13 @@
   }
 
   h2,
-  h3 {
+  h3,
+  .email {
     display: inline;
     color: whitesmoke;
     font-weight: 100;
     line-height: 1.4;
-    font-size: clamp(24px, 4vw, 48px);
+    font-size: clamp(32px, 4vw, 48px);
     font-family: "DM Sans", sans-serif;
     font-optical-sizing: auto;
     font-style: normal;
@@ -61,10 +62,12 @@
   h3 {
     color: #f5f5f580;
     font-weight: 200;
-    font-size: clamp(16px, 4vw, 20px);
-    /* display: flex;
-    align-items: center; */
+    font-size: clamp(18px, 4vw, 22px);
     line-height: 0.8;
+  }
+
+  .email {
+    font-size: clamp(24px, 4vw, 48px);
   }
 
   p,
@@ -83,18 +86,16 @@
   }
 
   ul {
-    width: fit-content;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    /* flex-direction: column; */
+    gap: 1rem;
+    justify-content: center;
   }
 
   li {
-    display: block;
     width: fit-content;
-  }
-
-  .socials {
-    li {
-      display: inline-block;
-    }
   }
 
   span {
@@ -198,9 +199,10 @@
 
   .nav-sub {
     display: flex;
-    justify-content: center;
+    justify-content: right;
     align-items: center;
     gap: 2rem;
+    padding-right: 2rem;
     background: #00000040;
     width: 100%;
     padding-block: 1rem;
@@ -208,12 +210,17 @@
     -webkit-backdrop-filter: blur(20px);
   }
 
-  .container-holder {
+  .container-holder,
+  .container-holder-top {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: start;
     min-height: 100vh;
+  }
+
+  .container-holder-top {
+    align-items: center;
   }
 
   .container {
@@ -231,17 +238,15 @@
   hr {
     margin-block: 0.2rem;
     border: 0px;
-    /* border-top: 1px solid #f5f5f520; */
     width: 100%;
   }
 
-  .bio-holder1,
-  .bio-holder2 {
+  .content-holder {
     display: flex;
     flex-wrap: wrap;
-    padding: 3rem;
-    padding-bottom: 0rem;
-    justify-content: space-between;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    justify-content: center;
   }
 
   .content {
@@ -250,15 +255,20 @@
     text-align: center;
   }
 
-  .bio-holder2 {
-    padding-top: 0rem;
-  }
-
   img {
     width: 100%;
     height: 100%;
     object-fit: cover;
     border: 1px solid #f5f5f540;
+  }
+
+  ul img {
+    all: unset;
+    width: 80px;
+    height: 80px;
+    background: whitesmoke;
+    border-radius: 100rem;
+    padding: 1rem;
   }
 
   .image-holder {
@@ -369,20 +379,19 @@
   .nav-sub {
     gap: 4rem;
     padding-block: 2rem;
+    padding-right: 6rem;
   }
 
   .container-holder {
     align-items: center;
   }
 
-  .container {
-    padding-block: 4rem;
+  .container-holder-top {
+    align-items: flex-end;
   }
 
-  .bio-holder1,
-  .bio-holder2 {
-    padding: 3rem;
-    padding-bottom: 0rem;
+  .container {
+    padding-block: 4rem;
   }
 
   .content {
@@ -428,5 +437,9 @@
 
   .image-btns {
     display: none;
+  }
+
+  .content-holder {
+    padding-top: 12rem;
   }
 }
