--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,10 @@
     background: whitesmoke;
   }
 
+  #leva__root>* {
+    scale: 0%;
+  }
+
   html,
   body,
   main {
@@ -27,6 +31,32 @@
     padding: 0px;
     margin: 0px;
     box-sizing: border-box;
+    z-index: 2;
+
+    -webkit-touch-callout: none;
+    /* iOS Safari */
+    -webkit-user-select: none;
+    /* Safari */
+    -khtml-user-select: none;
+    /* Konqueror HTML */
+    -moz-user-select: none;
+    /* Old versions of Firefox */
+    -ms-user-select: none;
+    /* Internet Explorer/Edge */
+    user-select: none;
+    /* Non-prefixed version, currently
+                                  supported by Chrome, Edge, Opera and Firefox */
+  }
+
+  .background {
+    position: fixed;
+    height: 100vh;
+    width: 100%;
+    z-index: 1;
+
+    ::-webkit-scrollbar {
+      display: none;
+    }
   }
 
   button {
@@ -250,7 +280,7 @@
   }
 
   .content {
-    padding-block: 1rem;
+    padding-bottom: 1rem;
     width: 100%;
     text-align: center;
   }
@@ -336,6 +366,13 @@
     margin-top: 1rem;
     color: #f5f5f580;
   }
+
+  .profilepic {
+    border-radius: 100rem;
+    width: 175px;
+    height: 175px;
+    margin-bottom: 1rem;
+  }
 }
 
 @media (min-width: 699px) {
@@ -379,6 +416,11 @@
     height: 80px;
     padding: 1rem;
   }
+
+  .profilepic {
+    width: 250px;
+    height: 250px;
+  }
 }
 
 @media (min-width: 1499px) {
@@ -401,7 +443,7 @@
   }
 
   .content {
-    padding-block: 0rem;
+    padding-bottom: 0rem;
     width: calc(100% / 3);
   }
 
