--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -250,7 +250,8 @@
   }
 
   .container-holder-top {
-    align-items: center;
+    margin-top: 6rem;
+    align-items: start;
   }
 
   .container {
