--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Inter+Tight:ital,wght@0,100..900;1,100..900&family=Inter:wght@100..900&display=swap');
+@import url("https://api.fontshare.com/v2/css?f[]=switzer@100,101,200,201,300,301,400,401,500,501,600,601,700,701,800,801,900,901,1,2&display=swap");
 
 @media (min-width: 1px) {
   ::-webkit-scrollbar {
@@ -7,15 +6,11 @@
   }
 
   ::-webkit-scrollbar-track {
-    background: #070707;
-  }
-
-  ::-webkit-scrollbar-thumb {
     background: whitesmoke;
   }
 
-  #leva__root>* {
-    scale: 0%;
+  ::-webkit-scrollbar-thumb {
+    background: #070707;
   }
 
   html,
@@ -24,7 +19,7 @@
     width: 100%;
     min-height: 100vh;
     position: relative;
-    background: #070707;
+    background: white;
   }
 
   * {
@@ -32,20 +27,8 @@
     margin: 0px;
     box-sizing: border-box;
     z-index: 2;
-
-    -webkit-touch-callout: none;
-    /* iOS Safari */
-    -webkit-user-select: none;
-    /* Safari */
-    -khtml-user-select: none;
-    /* Konqueror HTML */
-    -moz-user-select: none;
-    /* Old versions of Firefox */
-    -ms-user-select: none;
-    /* Internet Explorer/Edge */
-    user-select: none;
-    /* Non-prefixed version, currently
-                                  supported by Chrome, Edge, Opera and Firefox */
+    font-family: 'Switzer', sans-serif;
+    color: #070707;
   }
 
   .background {
@@ -53,10 +36,6 @@
     height: 100vh;
     width: 100%;
     z-index: 1;
-
-    ::-webkit-scrollbar {
-      display: none;
-    }
   }
 
   button {
@@ -66,153 +45,43 @@
   }
 
   h1 {
-    display: inline;
-    color: whitesmoke;
     font-weight: 800;
     line-height: 1;
-    font-size: clamp(64px, 14vw, 180px);
-    font-family: "Inter Tight", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
+    font-size: clamp(64px, 10vw, 160px);
   }
 
-  h2,
-  h3,
-  .email {
-    display: inline;
-    color: whitesmoke;
-    font-weight: 200;
-    line-height: 1.4;
-    font-size: clamp(32px, 4vw, 48px);
-    font-family: "DM Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
+  h2 {
+    font-weight: 300;
+    line-height: 1;
+    font-size: clamp(24px, 4vw, 64px);
   }
 
-  h3 {
-    color: #f5f5f580;
-    font-weight: 200;
-    font-size: clamp(18px, 4vw, 22px);
-    line-height: 0.8;
-  }
-
-  .email {
-    font-size: clamp(24px, 4vw, 48px);
-  }
-
-  p,
-  span,
-  a,
-  button,
-  li {
-    display: inline;
-    color: whitesmoke;
-    font-size: clamp(16px, 2vw, 20px);
+  p {
+    font-size: clamp(14px, 2vw, 20px);
     font-weight: 300;
     line-height: 1.4;
-    font-family: "DM Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-  }
-
-  ul {
-    display: flex;
-    align-items: center;
-    flex-wrap: wrap;
-    /* flex-direction: column; */
-    gap: 1rem;
-    justify-content: center;
-  }
-
-  li {
-    width: fit-content;
   }
 
   span {
-    display: inline;
-    font-size: 42px;
+    font-weight: 800;
+    font-size: clamp(24px, 2vw, 28px);
     line-height: 1.4;
   }
 
   a,
   button {
+    line-height: 1.4;
+    font-size: clamp(18px, 2vw, 24px);
+    font-weight: 800;
     text-decoration: none;
     width: fit-content;
-    font-weight: 300;
     transition: 150ms linear;
   }
 
   a:hover,
   button:hover {
-    opacity: 0.65;
+    opacity: 0.4;
     transition: 150ms linear;
-  }
-
-  .formHolder {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-  }
-
-  form {
-    width: 1280px;
-    padding-block: 4rem;
-    flex-direction: column;
-    gap: 0.4rem;
-    align-content: baseline;
-
-    hr {
-      margin: 0;
-      width: 100%;
-    }
-  }
-
-  .form-btn-holder {
-    width: 100%;
-    text-align: right;
-  }
-
-  .form-btn {
-    color: whitesmoke;
-    font-size: clamp(18px, 4vw, 24px);
-  }
-
-  input,
-  textarea {
-    all: unset;
-    color: whitesmoke;
-    font-family: "DM Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-style: normal;
-    -webkit-border-radius: 0;
-    border-radius: 0;
-    outline: none;
-    margin-bottom: 1rem;
-    background: none;
-    border: 1px solid #f5f5f540;
-    border-radius: 1rem;
-    font-weight: 300;
-    font-size: clamp(16px, 2vw, 20px);
-    padding-block: 1.4rem;
-    padding-left: 1rem;
-    transition: 150ms linear;
-  }
-
-  input:hover,
-  textarea:hover {
-    border: 1px solid #f5f5f580;
-    transition: 150ms linear;
-  }
-
-  input:focus,
-  textarea:focus {
-    border: 1px solid whitesmoke;
-    transition: 150ms linear;
-  }
-
-  ::placeholder {
-    font-weight: 200;
-    color: #f5f5f580;
   }
 
   .nav {
@@ -225,6 +94,7 @@
     padding-bottom: 0rem;
     width: 100%;
     z-index: 3;
+    background: white;
   }
 
   .nav-sub {
@@ -233,11 +103,8 @@
     align-items: center;
     gap: 2rem;
     padding-right: 2rem;
-    background: #00000040;
     width: 100%;
-    padding-block: 1rem;
-    backdrop-filter: blur(20px);
-    -webkit-backdrop-filter: blur(20px);
+    height: 6rem;
   }
 
   .container-holder,
@@ -245,250 +112,74 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: start;
+    align-items: center;
     min-height: 100vh;
+    flex-wrap: wrap;
+    margin-block: 2rem;
   }
 
   .container-holder-top {
-    padding-top: 6rem;
-    align-items: start;
+    margin-block: 0rem;
+    margin-top: 4rem;
   }
 
   .container {
-    width: 90%;
-    padding-block: 2rem;
-  }
-
-  .footer-links {
-    display: flex;
-    justify-content: left;
-    flex-wrap: wrap;
-    gap: 2rem;
-  }
-
-  hr {
-    margin-block: 0.2rem;
-    border: 0px;
-    width: 100%;
-  }
-
-  .content-holder {
-    display: flex;
-    flex-wrap: wrap;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    justify-content: center;
-  }
-
-  .content {
-    padding-bottom: 1rem;
-    width: 100%;
-    text-align: center;
+    width: 95%;
   }
 
   img {
-    width: 100%;
-    height: 100%;
     object-fit: cover;
-    border: 1px solid #f5f5f540;
+    width: 400px;
+    height: 650px;
   }
 
-  ul img {
-    all: unset;
-    width: 60px;
-    height: 60px;
+  .social-btn-holder {
+    gap: 0.6rem;
+    display: flex;
+    width: fit-content;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+
+  .social-btn {
+    width: 4rem;
+    height: 4rem;
     background: whitesmoke;
     border-radius: 100rem;
-    padding: 0.4rem;
-  }
-
-  .image-holder {
-    height: 281px;
-    width: 100%;
-    position: relative;
+    color: #070707;
     display: flex;
     justify-content: center;
     align-items: center;
   }
 
-  .image-subLeft {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translateY(0%);
+  .text-holder {
     width: 100%;
-    height: 256px;
-    cursor: pointer;
-    z-index: 1;
-    transition: 300ms ease-in-out;
-  }
-
-  .image-subRight {
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: auto;
-    transform: translateY(0%);
-    width: 100%;
-    height: 256px;
-    cursor: pointer;
-    z-index: 1;
-    transition: 300ms ease-in-out;
-  }
-
-  .image-subLeft:hover,
-  .image-subRight:hover {
-    scale: 1.05;
-    transition: 300ms ease-in-out;
-  }
-
-  .image-subLeft:active,
-  .image-subRight:active {
-    scale: .95;
-    transition: 300ms ease-in-out;
-  }
-
-  .image-main {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translateX(0%);
-    transform: translateY(0%);
-    z-index: 2;
-    width: 100%;
-    height: 256px;
-    box-shadow: 0px 0px 8px 4px #00000010;
-  }
-
-  .image-btns {
-    display: flex;
-    justify-content: space-between;
-    gap: 0.4rem;
-    margin-top: 1rem;
-    color: #f5f5f580;
-  }
-
-  .profilepic {
-    border-radius: 100rem;
-    width: 175px;
-    height: 175px;
-    margin-bottom: 1rem;
-  }
-}
-
-@media (min-width: 699px) {
-  .image-holder {
-    height: 385px;
-  }
-
-  .image-main {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    z-index: 2;
-    box-shadow: 0px 0px 8px 4px #00000010;
-    width: 640px;
-    height: 360px;
-  }
-
-  .image-subLeft {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    box-shadow: 0px 0px 8px 4px #00000010;
-    width: 640px;
-    height: 360px;
-  }
-
-  .image-subRight {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    box-shadow: 0px 0px 8px 4px #00000010;
-    width: 640px;
-    height: 360px;
-  }
-
-  ul img {
-    width: 80px;
-    height: 80px;
-    padding: 1rem;
-  }
-
-  .profilepic {
-    width: 250px;
-    height: 250px;
+    margin-top: 2rem;
+    margin-bottom: 4rem;
   }
 }
 
 @media (min-width: 1499px) {
-  .nav-sub {
-    gap: 4rem;
-    padding-block: 2rem;
-    padding-right: 6rem;
+  h2 {
+    font-weight: 200;
   }
 
-  .container-holder {
-    align-items: center;
+  .nav-sub {
+    gap: 4rem;
+    padding-right: 4rem;
   }
 
   .container-holder-top {
-    align-items: flex-end;
+    margin-top: 2rem;
   }
 
   .container {
-    padding-block: 4rem;
+    width: 80%;
   }
 
-  .content {
-    padding-bottom: 0rem;
-    width: calc(100% / 3);
-  }
-
-  .image-holder {
-    height: 601px;
-  }
-
-  .image-subLeft {
-    position: absolute;
-    top: 0;
-    left: 0;
-    transform: translateY(28%);
-    width: 640px;
-    height: 360px;
-    z-index: 1;
-  }
-
-  .image-subRight {
-    position: absolute;
-    top: 0;
-    left: auto;
-    right: 0;
-    transform: translateY(28%);
-    width: 640px;
-    height: 360px;
-    z-index: 1;
-  }
-
-  .image-main {
-    position: absolute;
-    top: 0;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 1024px;
-    height: 576px;
-    z-index: 2;
-    box-shadow: 0px 0px 8px 4px #00000010;
-  }
-
-  .image-btns {
-    display: none;
-  }
-
-  .content-holder {
-    padding-top: 12rem;
+  .text-holder {
+    width: 60%;
+    margin-bottom: 10rem;
   }
 }
