--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,7 +71,7 @@
   a,
   button {
     line-height: 1.4;
-    font-size: clamp(18px, 2vw, 24px);
+    font-size: clamp(14px, 2vw, 20px);
     font-weight: 500;
     text-decoration: none;
     width: fit-content;
@@ -128,8 +128,15 @@
 
   img {
     object-fit: cover;
-    width: 400px;
-    height: 650px;
+    object-position: center center;
+  }
+
+  .img-sm,
+  .img-lg {
+    width: 100%;
+    height: auto;
+    border: 1px solid whitesmoke;
+    transition: 300ms ease-in-out;
   }
 
   .social-btn-holder {
@@ -157,6 +164,22 @@
     margin-top: 2rem;
     margin-bottom: 4rem;
   }
+
+  a:hover {
+
+    .img-sm,
+    .img-lg {
+      border: 1px solid #070707;
+      transition: 300ms ease-in-out;
+    }
+  }
+}
+
+@media (min-width: 425px) {
+  .img-sm {
+    width: 400px;
+    height: 720px;
+  }
 }
 
 @media (min-width: 1499px) {
@@ -180,5 +203,10 @@
   .text-holder {
     width: 60%;
     margin-bottom: 10rem;
+  }
+
+  .img-lg {
+    width: 1280px;
+    height: 720px;
   }
 }
