--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,7 +103,7 @@
     justify-content: right;
     align-items: center;
     gap: 2rem;
-    height: 6rem;
+    height: 5rem;
   }
 
   .container-holder,
@@ -119,7 +119,7 @@
 
   .container-holder-top {
     margin-block: 0rem;
-    margin-top: 4rem;
+    align-items: flex-end;
   }
 
   .container {
@@ -162,7 +162,7 @@
   .text-holder {
     width: 100%;
     margin-top: 2rem;
-    margin-bottom: 4rem;
+    margin-bottom: 6rem;
   }
 
   a:hover {
@@ -182,6 +182,12 @@
   }
 }
 
+@media (min-width: 799px) {
+  .text-holder {
+    margin-bottom: 8rem;
+  }
+}
+
 @media (min-width: 1499px) {
   h2 {
     font-weight: 200;
@@ -192,17 +198,13 @@
     gap: 4rem;
   }
 
-  .container-holder-top {
-    margin-top: 2rem;
-  }
-
   .container {
     width: 80%;
   }
 
   .text-holder {
     width: 60%;
-    margin-bottom: 10rem;
+    margin-bottom: 12rem;
   }
 
   .img-lg {
