--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -104,6 +104,7 @@
     align-items: center;
     gap: 2rem;
     height: 5rem;
+    padding-right: 1rem;
   }
 
   .container-holder,
@@ -139,6 +140,10 @@
     transition: 300ms ease-in-out;
   }
 
+  /* .img-lg {
+    margin-top: 12rem;
+  } */
+
   .social-btn-holder {
     gap: 0.6rem;
     display: flex;
@@ -165,14 +170,14 @@
     margin-bottom: 6rem;
   }
 
-  a:hover {
+  /* a:hover {
 
     .img-sm,
     .img-lg {
       border: 1px solid #07070740;
       transition: 300ms ease-in-out;
     }
-  }
+  } */
 }
 
 @media (min-width: 425px) {
@@ -196,6 +201,7 @@
   .nav-sub {
     width: 80%;
     gap: 4rem;
+    padding-right: 0rem;
   }
 
   .container {
