--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -59,11 +59,11 @@
   h2 {
     font-weight: 300;
     line-height: 1.4;
-    font-size: clamp(24px, 4vw, 42px);
+    font-size: clamp(28px, 4vw, 42px);
   }
 
   p {
-    font-size: clamp(14px, 2vw, 20px);
+    font-size: clamp(16px, 2vw, 20px);
     font-weight: 300;
     line-height: 1.4;
   }
@@ -121,7 +121,7 @@
   .nav-sub {
     width: 90%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     align-items: center;
     gap: 1rem;
     height: 5rem;
@@ -154,7 +154,7 @@
 
   .container-title {
     width: 95%;
-    margin-bottom: 18rem;
+    margin-bottom: 12rem;
     text-align: left;
 
     h1,
@@ -224,8 +224,7 @@
 
   .text-holder {
     width: 100%;
-    margin-top: 2rem;
-    margin-bottom: 4rem;
+    padding-top: 0rem;
   }
 
   a:hover {
@@ -248,6 +247,18 @@
     border-radius: 100rem;
     z-index: 1;
   }
+
+  .orb-black {
+    margin-left: -10%;
+    position: absolute;
+    top: 16rem;
+    left: 0rem;
+    width: 425px;
+    aspect-ratio: 1;
+    background: #070707;
+    border-radius: 100rem;
+    z-index: 1;
+  }
 }
 
 @media (min-width: 425px) {
@@ -255,11 +266,17 @@
     width: 400px;
     height: 720px;
   }
+
+  .orb-black {
+    width: 100%;
+    padding-bottom: 100%;
+  }
 }
 
 @media (min-width: 799px) {
   .nav-sub {
     width: 95%;
+    justify-content: space-between;
   }
 
   .nav-links {
@@ -267,12 +284,15 @@
     gap: 4rem;
   }
 
-  .text-holder {
-    margin-bottom: 8rem;
-  }
-
   .container-title {
     width: 60%;
+  }
+
+  .orb-black {
+    margin-left: 5%;
+    top: -4rem;
+    width: 100%;
+    padding-bottom: 100%;
   }
 }
 
@@ -287,7 +307,7 @@
 
   .text-holder {
     width: 60%;
-    margin-bottom: 10rem;
+    padding-top: 4rem;
   }
 
   .img-lg {
@@ -306,6 +326,19 @@
     margin-right: auto;
     height: 600px;
     width: 600px;
+  }
+
+  .orb-black {
+    margin-left: 10%;
+    position: absolute;
+    top: -8rem;
+    left: 0rem;
+    height: 1200px;
+    width: 1200px;
+    padding-bottom: 0%;
+    background: #070707;
+    border-radius: 100rem;
+    z-index: 1;
   }
 
   .contact-btn {
